--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: I Nyoman
+  name: I Nyoman Mahayasa Adiputra
   email: inyoman.m@chula.ac.th # change to your email address
   links:
     # The first element serves as the copyright owner's link
